# jopus

./: .flattened-pom.xml  .gitignore  README.md  benchmark_chart.html  build_all.ps1  build_all.sh  build_log.txt  build_opus.ps1  generate_bindings.ps1  init_deps.sh  pom.xml  test_output.opus  test_output22.opus  test_output223.opus
.github/workflows/: deploy.yml  release.yml
install/include/opus/: version.h
install/lib/: libogg.la  libogg.so.0.8.6  libopus.la  libopus.so.0.11.1  libopusenc.la  libopusfile.la  libopusfile.so.0.4.5  libopusurl.la  libopusurl.so.0.4.5  ogg.lib  opus.lib
install/lib/cmake/Opus/: OpusTargets.cmake
install/lib/pkgconfig/: libopusenc.pc  ogg.pc  opus.pc  opusfile.pc  opusurl.pc
install/share/doc/ogg/html/libogg/: Makefile
jopus/: .flattened-pom.xml  pom.xml
jopus-core/: pom.xml
jopus-core/src/main/java/io/github/kinsleykajiva/: AudioBuilder.java  AudioLib.java
jopus-core/src/main/java/io/github/kinsleykajiva/opus/: opus_h.java
jopus-core/src/main/java/io/github/kinsleykajiva/opusenc/: ope_close_func.java  opusenc_h$shared.java  opusenc_h.java
jopus-demo-app/: .flattened-pom.xml  pom.xml
jopus-demo-app/src/main/java/io/github/kinsleykajiva/demo/: BenchmarkCritical.java  Main.java  MainCriticalTest.java  (+2 more)
jopus/src/main/java/io/github/kinsleykajiva/: AudioBuilder.java  G711Utils.java
libopusenc/: CMakeLists.txt
libopusenc/win32/: config.h
src/main/java/io/github/kinsleykajiva/: Main.java
src/main/java/io/github/kinsleykajiva/opus/: Main.java
src/main/java/io/github/kinsleykajiva/opusenc/: ope_write_func.java
(+39 files in other folders)
